code4sa to openup visually

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image" content="https://static.code4sa.org/taxclock/preview.jpg" />
   <meta property="og:url" content="https://static.code4sa.org/taxclock/index.html?show-embed-link=true" />
 
-  <title>The 2017 Tax Clock - Code4SA Data Journalism Academy</title>
+  <title>The 2017 Tax Clock - OpenUp</title>
 
 </head>
 
@@ -114,8 +114,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <div class="credits text-center">A project by <a href="http://academy.code4sa.org" target="_blank"><img src="logo_academy.png"></a></div>
-          <div class="registrations">Code for South Africa is a non-profit organisation registered with the South African Department of Social Development.</div>
+          <div class="credits text-center">A project by <a href="https://openup.org.za" target="_blank"><img src="logo_academy.png"></a></div>
+          <div class="registrations">OpenUp is a non-profit organisation registered with the South African Department of Social Development.</div>
           <div class="license">Licensed under a Creative Commons Attribution 4.0 International License</div>
         </div>
       </div>
