--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <div class="credits text-center">A project by <a href="https://openup.org.za" target="_blank"><img src="logo_academy.png"></a></div>
+          <div class="credits text-center"><a href="https://openup.org.za" target="_blank"><img src="logo.png"></a></div>
           <div class="registrations">OpenUp is a non-profit organisation registered with the South African Department of Social Development.</div>
           <div class="license">Licensed under a Creative Commons Attribution 4.0 International License</div>
         </div>
