Updated title in order to provide better twitter text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image" content="https://static.code4sa.org/taxclock/preview.jpg" />
   <meta property="og:url" content="https://static.code4sa.org/taxclock/index.html?show-embed-link=true" />
 
-  <title>The 2018 Tax Clock - OpenUp</title>
+  <title>The 2018 Tax Clock - How much time do you spend paying off your tax</title>
 
 </head>
 
