hide difference when no amount

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
         var startTime = calc.START_OF_DAY;
 
         /* Clear output */
+        $('#difference-wrapper').hide();
         $('#output-wrapper').hide();
 
         if (income > 0){
