Updated click text

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 
             if (itemID !== 'working-for-yourself' && itemID !== 'national-debt' && itemID !== 'unallocated-reserves')
             {
-              $(this).append('<a class="vulekamali-link" target="_blank" href="' + vulekamali + '">Explore spending details</a>');
+              $(this).append('<a class="vulekamali-link" target="_blank" href="' + vulekamali + '">Click for more information</a>');
             }
 
             // Activate tooltips
