--- a/index.html
+++ b/index.html
@@ -291,7 +291,17 @@
       $('.income').on('change keyup', function() {
         var income = parseFloat($(this).val());
         var calc = new IncomeCalculator(taxes_2017);
+        var calc_2018 = calc;
+        var calc_2017 = new IncomeCalculator(taxes_2017);
+        var tax_change = calc_2018.personalTax - calc_2017.personalTax;
         var output = calc.calculateIncomeBreakdown(income);
+        var output_2018 = output;
+        var output_2017 = calc_2017.calculateIncomeBreakdown(income);
+        var tax_change = output_2018.personalTax - output_2017.personalTax;
+        var formatted_tax_change = tax_change.toFixed().replace(/(\d)(?=(\d{3})+(,|$))/g, '$1,')
+
+        $("#amount").text(formatted_tax_change);
+
         cal = createICS(output.breakdown);
         var startTime = calc.START_OF_DAY;
 
