Updated unicode arrow

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                    'slow');
                           }
                         </script>
-                        <a class="btn btn-default btn-submit" onclick="scrollToOutput()">⯆</a>
+                        <a class="btn btn-default btn-submit" onclick="scrollToOutput()">▼</a>
                       </div>
                     <h6>* This should be your income <i>before</i> tax but <i>after</i> deductions such as pension and medical aid.</h6>
                   </div>
