--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <div class="footnotes">
     <div class="container">
       <div class="col-md-6 col-md-offset-3">
-        <h6>Approximations are based on VAT and personal income tax as per the 2018 budget. VAT calculation assumes all disposable income is spent on standard rated (15%) items.</h6>
+        <h6>This calculator only provides approximations and makes simplifying assumptions. Th calculations are based on VAT and personal income tax as per the 2018 budget. The VAT calculation assumes all disposable income is spent on standard rated (15%) items. Secondary and tertiary rebates are not included, nor are other indirect taxes such as customs, sin taxes, fuel levy, etc.</h6>
       </div>
     </div>
   </div>
