some typos and new description for social security funds

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="col-md-6 col-md-offset-3">
           <div id="difference-wrapper">
             <div id="difference">
-              <h4 id="did-you-know-wrapper"><span id="did-you-know">Did you know?</span> You are paying <span id="amount-wrapper">R<span id="amount">1240</span> more</span> in taxes than last year. You are also working <span id="amount-wrapper"><span id="tax-minutes-change">x</span> more</span> minute(s) than in 2017. In 2018, you start earning for yourself at <span id="amount-wrapper"><span id="personal-time"></span></span>.</h3>
+              <h4 id="did-you-know-wrapper"><span id="did-you-know">Did you know?</span> You are paying <span id="amount-wrapper">R<span id="amount">1240</span> more</span> in taxes than last year. You are also working <span id="amount-wrapper"><span id="tax-minutes-change">x</span> more</span> minute(s) more for government services than in 2017. In 2018, you start earning for yourself at <span id="amount-wrapper"><span id="personal-time"></span></span>.</h3>
               <h5 id="scroll-down">Scroll down for a detailed breakdown of your day</h5>
             </div>
           </div>
@@ -123,7 +123,7 @@
   <div class="footnotes">
     <div class="container">
       <div class="col-md-6 col-md-offset-3">
-        <h6>This calculator only provides approximations and makes simplifying assumptions. Th calculations are based on VAT and personal income tax as per the 2018 budget. The VAT calculation assumes all disposable income is spent on standard rated (15%) items. Secondary and tertiary rebates are not included, nor are other indirect taxes such as customs, sin taxes, fuel levy, etc.</h6>
+        <h6>This calculator only provides approximations and makes simplifying assumptions. These calculations are based on VAT and personal income tax as per the 2018 budget. The VAT calculation assumes all disposable income is spent on standard rated (15%) items. Secondary and tertiary rebates are not included, nor are other indirect taxes such as customs, sin taxes, fuel levy, etc.</h6>
       </div>
     </div>
   </div>
@@ -169,7 +169,7 @@
       'social-protection': 'This function provides social security and a safety net for low-income South Africans. It also improves social welfare service delivery to vulnerable individuals.',
       'economic-regulation-and-infrastructure': 'This includes water and road infrastructure.',
       'post-school-education-and-training': 'This includes university subsidies, NSFAS, technical and vocational training, and community education. This along with debt servicing costs is the fastest growing item of expenditure in the 2018 budget.',
-      'social-security-funds': '',
+      'social-security-funds': 'This includes subsidies for early childhood development and to employ social workers.',
       'public-administration-and-fiscal-affairs': '',
       'industrialisation-and-exports': 'Including economic development and incentive programmes.',
       'agriculture-and-rural-development': 'This includes land reform, land restitution and farmer support.',
