Fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="col-md-6 col-md-offset-3">
           <div id="difference-wrapper">
             <div id="difference">
-              <h4 id="did-you-know-wrapper"><span id="did-you-know">Did you know?</span> You are paying <span id="amount-wrapper">R<span id="amount">1240</span> more</span> in taxes than last year. You are also working <span id="amount-wrapper"><span id="tax-minutes-change">x</span> more</span> minute(s) more for government services than in 2017. In 2018, you start earning for yourself at <span id="amount-wrapper"><span id="personal-time"></span></span>.</h3>
+              <h4 id="did-you-know-wrapper"><span id="did-you-know">Did you know?</span> You are paying <span id="amount-wrapper">R<span id="amount">1240</span> more</span> in taxes than last year. You are also working an addtional <span id="amount-wrapper"><span id="tax-minutes-change"></span> minutes(s)</span> for government services than in 2017. In 2018, you start earning for yourself at <span id="amount-wrapper"><span id="personal-time"></span></span>.</h3>
               <h5 id="scroll-down">Scroll down for a detailed breakdown of your day</h5>
             </div>
           </div>
