Updated input box to only accept numbers

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h4>What is your <strong>annual income*</strong> (before tax)?</h4>
                       <div class="input-group input-group-lg">
                         <span class="input-group-addon">R</span>
-                        <input class="income form-control" type="text" name="income"  aria-label="Annual income before tax">
+                        <input class="income form-control" type="number" name="income"  aria-label="Annual income before tax">
                         <script>
                           function scrollToOutput(){
                             $('html,body').animate({
