Added link to vulekamali

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="explanation-wrapper">
           <div class="explanation">
-            <strong>Did you know, you don’t just pay tax in Rands, but hours as well?</strong> Tax forms part of your total salary, which means that part of your 9-5 goes towards the development of the state. Enter your salary below to see how many hours you spend on government services and where your money may be going.
+            <strong><p>Did you know, you don’t just pay tax in Rands, but hours as well?</strong></p>
+            <p>Tax forms part of your total salary, which means that part of your 9-5 goes towards the development of the state. Enter your salary below to see how many hours you spend on government services and where your money may be going.</p>
+            <p>Learn more about the budget on <a href="https://vulekamali.gov.za">vulekamali.gov.za</a></p>
           </div>
         </div>
       </div>
